--- a/client/src/styles/abstracts/_mixins.scss
+++ b/client/src/styles/abstracts/_mixins.scss
@@ -1,3 +1,4 @@
+@use "sass:math";
 /* ==========================================================================
    Mixins
    ========================================================================== */
@@ -177,7 +178,7 @@
   &::before {
     content: "";
     display: block;
-    padding-top: percentage($height / $width);
+    padding-top: math.percentage($height / $width);
   }
 
   > * {
