--- a/client/src/styles/components/_form.scss
+++ b/client/src/styles/components/_form.scss
@@ -1,3 +1,5 @@
+@use "../abstracts/mixins";
+
 /* ==========================================================================
    Form Component Styles
    ========================================================================== */
@@ -20,9 +22,9 @@
   }
   
   &__input {
-    @include input-reset;
-    @include transition(border-color, box-shadow);
-    @include focus-visible;
+    @include mixins.input-reset;
+    @include mixins.transition(border-color, box-shadow);
+    @include mixins.focus-visible;
     
     width: 100%;
     padding: var(--spacing-3) var(--spacing-4);
@@ -72,7 +74,7 @@
   
   &__checkbox,
   &__radio {
-    @include input-reset;
+    @include mixins.input-reset;
     
     width: 1rem;
     height: 1rem;
