--- a/client/src/styles/layout/_container.scss
+++ b/client/src/styles/layout/_container.scss
@@ -1,3 +1,5 @@
+@use "../abstracts/mixins";
+
 /* ==========================================================================
    Layout Container Styles
    ========================================================================== */
@@ -8,11 +10,11 @@
   margin: 0 auto;
   padding: 0 var(--spacing-4);
 
-  @include tablet-up {
+  @include mixins.tablet-up {
     padding: 0 var(--spacing-6);
   }
 
-  @include desktop-up {
+  @include mixins.desktop-up {
     padding: 0 var(--spacing-8);
   }
 
@@ -57,18 +59,18 @@
 .section {
   padding: var(--spacing-16) 0;
 
-  @include tablet-up {
+  @include mixins.tablet-up {
     padding: var(--spacing-20) 0;
   }
 
-  @include desktop-up {
+  @include mixins.desktop-up {
     padding: var(--spacing-24) 0;
   }
 
   &--sm {
     padding: var(--spacing-8) 0;
 
-    @include tablet-up {
+    @include mixins.tablet-up {
       padding: var(--spacing-12) 0;
     }
   }
@@ -76,11 +78,11 @@
   &--lg {
     padding: var(--spacing-20) 0;
 
-    @include tablet-up {
+    @include mixins.tablet-up {
       padding: var(--spacing-24) 0;
     }
 
-    @include desktop-up {
+    @include mixins.desktop-up {
       padding: var(--spacing-32) 0;
     }
   }
